Changing styles and adding background color

--- a/to-do-list-project/src/App.css
+++ b/to-do-list-project/src/App.css
@@ -2,6 +2,7 @@
   text-align: center;
   height: 100vh;
   width: 100%;
+  background-color: #EFDCF9;
 }
 
 /* .App-logo {
@@ -10,7 +11,7 @@
 } */
 
 .header {
-  position: fixed;
+  /* position: fixed; */
   top: 0;
   width: 100%;
   background-color: #51087E;
@@ -170,33 +171,38 @@ super{
   background-color: #EFDCF9;
 }
 
- @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-} 
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media only screen and (max-width: 500px) {
+  .nav-links ol {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
   }
 
-  to {
-    transform: rotate(360deg);
+  .nav-links ol li {
+    padding: 2px;
+  }
+
+  .todoPage {
+    margin: 10px;
+  }
+
+  .listItemsTable {
+    margin: 1px;
+     
+  }
+
+  .listHeader{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    color:#FFFFFF;
+    font-weight: bold;
+    background-color: #6C0BA9;
+    
+  }
+  .ListItems {
+ 
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
   }
 }
+ 
